[package]
name = "slug_intl"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Slugify strings while preserving printable Unicode characters for modern browsers."
repository = "https://github.com/danieldickison/slug_intl"
license = "MIT"
keywords = ["slug", "slugify", "unicode"]
categories = ["web-programming", "internationalization", "value-formatting"]

[dependencies]
unicode-normalization = "0.1.23"
finl_unicode = {version = "1.2.0", default-features = false, features = ["categories"]}

[dev-dependencies]
urlencoding = "2.1.3"
